
  * snapshot of 0.13.1 branch
  * refresh patches, drop applied except-shadows-builtin-fix.patch
  * depend on libjs-jquery >= 1.7 (Closes: #685986)
  * drop build depends on dh-linktree and libjs-jquery-ui (Closes: #685985)
    - needs to be added again when we can use the packaged jquery-ui
  * drop LC_ALL=C.UTF-8 from build and install, not required anymore

 -- Julian Taylor <jtaylor.debian@googlemail.com>  Sat, 01 Sep 2012 13:56:37 +0200

ipython (0.13-1) unstable; urgency=low

  * New upstream release
    No repackging necessary anymore, js sources available in external
    minified variants are not installed
  * refresh patches, drop upstream applied full-qt-imports 
  * add except-shadows-builtin-fix.patch
  * drop libjs-jquery-ui dependency, use the embedded development branch
  * don't compress the examples
  * remove executable permissions on embedded codemirror files
  * build with LC_ALL=C.UTF-8 to avoid a unicode issue in setupbase.py
  * remove generated doc images in clean
  * update copyright with new and removed files
  * remove unreachable Stephan Peijnik from uploaders
    thank you for your work

 -- Julian Taylor <jtaylor.debian@googlemail.com>  Sat, 30 Jun 2012 15:05:32 +0200

ipython (0.12.1+dfsg-2) unstable; urgency=low

  * add ipython3-notebook package
  * move static notebook data to ipython-notebook-common
  * add ipython3 depend on python3-simplegeneric and remove the embedded copy
  * update use-system-mathjax-if-available.patch:
    prefer local mathjax installation over the system one
  * add parallel-2to3.patch:
    allow running 2to3 in parallel. Thanks to Jakub Wilk for the patch
  * add full-qt-imports.patch: (Closes: #671363)
    avoids choosing an incomplete qt version if a full one is available
  * use dh-linktree to link jquery-ui themes
  * debian/copyright: add missing copyright information for simplegeneric,
    mglob and decorators

 -- Julian Taylor <jtaylor.debian@googlemail.com>  Thu, 17 May 2012 19:07:19 +0200
