@@ -147,6 +147,17 @@ ifeq (,$(filter nodocs,$(DEB_BUILD_OPTIONS)))
 	  usr/share/doc/ipython/html/_images/qtconsole1.png
 endif
 
+# work around #683108
+override_dh_python2:
+	dh_python2 -pipython
+	dh_python2 -pipython-qtconsole
+	dh_python2 -pipython-notebook
+
+override_dh_python3:
+	dh_python3 -pipython3
+	dh_python3 -pipython3-qtconsole
+	dh_python3 -pipython3-notebook
+
 override_dh_installman:
 	dh_installman
 	mv debian/ipython3/usr/share/man/man1/ipython.1 \
